# epinr

./: .env.template  .envrc.template  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mrinr.txt  pip_constraints.txt  pyproject.toml  requirements.txt  setup.cfg
environment/: export_conda_env.sh  from-history-conda_mrinr2_environment.yml  from-history-conda_mrinr_environment.yml  mrinr.txt  mrinr2_pip_constraints.txt  mrinr2_pip_only_requirements.txt  mrinr2_revision_history.txt  mrinr_env_inspection.json  mrinr_pip_constraints.txt  mrinr_pip_only_no_jax_requirements.txt  mrinr_pip_only_requirements.txt  mrinr_revision_history.txt
environment/pytorch_pip_move/: mrinr2.txt  mrinr2_env_inspection.json
environment/pytorch_pip_move/installation/: 10_environment.yml  20_non_cuda_pip_requirements.txt  30_pytorch-jax_requirements.txt
mrinr/: __init__.py  _resample.py  metrics.py  typing.py  viz.py
mrinr/coords/: __init__.py  _affine.py  _sphere.py
mrinr/data/: __init__.py  _data.py  _sampling.py  _spatial_subj_data_containers.py  _standards.py  dwi_sr.py  io.py
mrinr/nn/: __init__.py  _activate_fn.py  _affine_resample_layers.py  _autoencoder.py  _carn.py  _conv_inr.py  _conv_nets.py  _freq.py  _gen.py  _inr.py  _sr.py  _utils.py  loss.py
mrinr/nn/spatial_coders/: __init__.py  _cont_coders.py  _layers.py  _monai_aekl.py  _nets.py
mrinr/sh_cmds/: __init__.py  _proc_runner.py
mrinr/sh_cmds/mrtrix/: __init__.py  _bias_correct.py  _file_manipulate.py  _mask.py  _utils.py
mrinr/tract/: __init__.py  _tract.py  _utils.py  peak_finding.py  seed.py  stopping.py
mrinr/utils/: __init__.py  _utils.py  ipython_tee.py
mrinr/vols/: __init__.py  _mrtrix3_spharm.py  _vols.py  dwi.py  odf.py
notebooks/epinr/dmri/: data_tabulation.ipynb  data_utils.py  epinr.ipynb  epinr.py  loss_utils.py
notebooks/epinr/dmri/comparison_methods/qsiprep/: dataset_description.json  run_qsiprep.sh
notebooks/epinr/dmri/comparison_methods/syn/: syn_default_params.sh  syn_intermode-intrasubj_params.sh
notebooks/epinr/dmri/comparison_methods/synb0/: scilpy_synb0.sh
notebooks/epinr/dmri/preproc/mica_mics/: README.md  create_epinr_dataset.sh  participants.json  participants.tsv  preproc_dwi.sh  run_freesurfer.sh  run_qsiprep_loop.sh
notebooks/epinr/dmri/preproc/vcu_ms/: create_epinr_dataset.sh  participants.json  participants.tsv  preproc_dwi.sh  run_qsiprep_loop.sh  slspec_60.txt
notebooks/epinr/dmri/results/: result_analysis.ipynb
notebooks/epinr/dmri/suscept_atlas/reg_atlas_to_mni/: ants_cmd.sh
scripts/: add_rician_noise_dwi.py  affine_mrtrix2ants.py  dsi_studio_cli_docker.sh  erode_mask.py  mrgrid_pad_to_args.py  niftibids2mgz.sh  ras_t1w_scanner2acpc_mrtrix_affine.sh  recon-all_args_from_niftibids.sh  rigid_reg_riders.sh  sync_nb-py.sh  synthstrip-docker
scripts/tractography/: mask2seed_coords.py  midpoint_seeds_from_tck.py  remove_degen_straight_streamlines.py  tck2trk.py  trk2tck.py
tests/: dissect_test_grid_resample.ipynb  test_affine.py  test_grid_resample.py  test_nn_inr.py
