[metadata]
name = mrinr
author = Tyler Spears
author_email = ai.tyler.spears@gmail.com
description = MR-INR: Implicit neural representations for MR imaging
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: mrinr.__version__
url = https://github.com/TylerSpears/mr-inr
keywords =
    inr
    mri
    biomedical
    image processing
    deep learning
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Operating System :: POSIX :: Linux
  Natural Language :: English
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Scientific/Engineering :: Medical Science Apps.
license_files =
  LICENSE

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
    numpy
    torch
    #einops
    #antspyx
    #monai
    #dipy

[flake8]
extend-exclude = *.pyc,sources/,results/
extend-ignore = E501,E303,E741
max-line-length = 88
